// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageMyPlan should render UI correctly for Blue Care groups 1`] = `
<body>
  <div>
    <div
      class="card-main undefined"
    >
      <div
        class="flex flex-col"
      >
        <h2
          class="title-2"
        >
          Manage My Plan
        </h2>
        <div
          class="flex flex-col"
        >
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <div
            class="flex flex-col p-1 false cursor-pointer link-row-container"
          >
            <div
              class="flex flex-row m-2"
            >
              <p
                class="link-row-head mr-2"
                tabindex="0"
              >
                Katie Beckett Banking Info
              </p>
              <img
                alt="link"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
            </div>
            <div
              class="m-2"
            >
              <div
                class="body-1 flex flex-row"
              >
                Find and update your bank draft details for your plan here.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ManageMyPlan should render UI correctly for other groups 1`] = `
<body>
  <div>
    <div
      class="card-main undefined"
    >
      <div
        class="flex flex-col"
      >
        <h2
          class="title-2"
        >
          Manage My Plan
        </h2>
        <div
          class="flex flex-col"
        >
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <div
            class="flex flex-col p-1 false cursor-pointer link-row-container"
          >
            <div
              class="flex flex-row m-2"
            >
              <p
                class="link-row-head mr-2"
                tabindex="0"
              >
                Report Other Health Insurance
              </p>
              <img
                alt="link"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
            </div>
            <div
              class="m-2"
            >
              <div
                class="body-1 flex flex-row"
              >
                Do you or anyone else on your plan have other insurance? Let us know so we can process your claims correctly.
              </div>
            </div>
          </div>
          <div
            class=""
            style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
          />
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <div
            class="flex flex-col p-1 false cursor-pointer link-row-container"
          >
            <div
              class="flex flex-row m-2"
            >
              <p
                class="link-row-head mr-2"
                tabindex="0"
              >
                Update Social Security Number
              </p>
              <img
                alt="link"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
            </div>
            <div
              class="m-2"
            >
              <div
                class="body-1 flex flex-row"
              >
                Add or update the Social Security Number associated with your plan.
              </div>
            </div>
          </div>
          <div
            class=""
            style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
          />
           
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <div
            class="flex flex-col p-1 false cursor-pointer link-row-container"
          >
            <div
              class="flex flex-row m-2"
            >
              <p
                class="link-row-head mr-2"
                tabindex="0"
              >
                Enroll in a Health Plan
              </p>
              <img
                alt="link"
                data-nimg="1"
                decoding="async"
                height="40"
                loading="lazy"
                src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                style="color: transparent;"
                width="40"
              />
            </div>
            <div
              class="m-2"
            >
              <div
                class="body-1 flex flex-row"
              >
                All our plans include a wide choice of doctors and healthy, money-saving extras. We’ll walk you through your options and help you choose the right one for your family.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
